--- a/index.qmd
+++ b/index.qmd
@@ -34,5 +34,6 @@ GitHub: <https://github.com/Zach-Gooch>
 
 ## Latest
 
-**Working paper:** *Performance Pay at Scale: Evidence from Texas’s Statewide Teacher Incentive Program*. [PDF](assets/papers/TIA_Paper.pdf){target="_blank"} · {target="_blank"}
-:::
+**Working paper:** *Performance Pay at Scale: Evidence from Texas’s Statewide Teacher Incentive Program*.  
+[PDF](assets/papers/TIA_Paper.pdf){target="_blank"}
+
