Fix link to the PDF of the working paper

--- a/index.qmd
+++ b/index.qmd
@@ -35,5 +35,5 @@ GitHub: <https://github.com/Zach-Gooch>
 ## Latest
 
 **Working paper:** *Performance Pay at Scale: Evidence from Texas’s Statewide Teacher Incentive Program*.  
-[PDF](assets/papers/TIA_Paper.pdf){target="_blank"}
+[PDF](assets/TIA_Paper.pdf){target="_blank"}
 
